language-server/src/tests/snapshots/gleam_language_server__tests__action__split_case_branch_with_function_call_body.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn go(n: Int) {\n  case n {\n    1 | 2 | 3 -> go(n - 1)\n    _ -> 0\n  }\n}"
---
----- BEFORE ACTION

pub fn go(n: Int) {
  case n {
    1 | 2 | 3 -> go(n - 1)
    ▔▔▔▔▔▔▔▔↑             
    _ -> 0
  }
}


----- AFTER ACTION

pub fn go(n: Int) {
  case n {
    1 -> go(n - 1)
    2 -> go(n - 1)
    3 -> go(n - 1)
    _ -> 0
  }
}
