language-server/src/tests/snapshots/gleam_language_server__tests__action__split_case_branch_with_variables.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn go(result: Result(Int, Int)) {\n  case result {\n    Ok(n) | Error(n) -> n\n    _ -> 0\n  }\n}"
---
----- BEFORE ACTION

pub fn go(result: Result(Int, Int)) {
  case result {
    Ok(n) | Error(n) -> n
    ▔▔▔▔▔▔▔▔↑            
    _ -> 0
  }
}


----- AFTER ACTION

pub fn go(result: Result(Int, Int)) {
  case result {
    Ok(n) -> n
    Error(n) -> n
    _ -> 0
  }
}
