language-server/src/tests/snapshots/gleam_language_server__tests__action__splitting_string_as_first_pipeline_step_inserts_brackets.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main() {\n  \"wibble  wobble\" |> io.println\n}"
---
----- BEFORE ACTION
pub fn main() {
  "wibble  wobble" |> io.println
          ↑                     
}


----- AFTER ACTION
pub fn main() {
  { "wibble " <> todo <> " wobble" } |> io.println
}
