language-server/src/tests/snapshots/gleam_language_server__tests__action__turn_call_into_use_starts_from_innermost_function.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(10, 20, fn(a) {\n    wibble(30, 40, fn(b) {\n      a + b\n    })\n  })\n}\n\nfn wibble(m, n, f) {\n  f(1)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(10, 20, fn(a) {
    wibble(30, 40, fn(b) {
           ▔▔▔▔↑          
      a + b
    })
  })
}

fn wibble(m, n, f) {
  f(1)
}


----- AFTER ACTION

pub fn main() {
  wibble(10, 20, fn(a) {
    use b <- wibble(30, 40)
    a + b
  })
}

fn wibble(m, n, f) {
  f(1)
}
