language-server/src/tests/snapshots/gleam_language_server__tests__action__turn_call_into_use_with_fn_with_no_args.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(fn() { todo })\n}\n\nfn wibble(f) {\n  f()\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(fn() { todo })
  ↑                    
}

fn wibble(f) {
  f()
}


----- AFTER ACTION

pub fn main() {
  use <- wibble
  todo
}

fn wibble(f) {
  f()
}
