language-server/src/tests/snapshots/gleam_language_server__tests__action__turn_call_into_use_with_module_function.snap
---
source: language-server/src/tests/action.rs
expression: "\nimport other\npub fn main() {\n  other.wibble(10, 20, fn(a) {\n    todo\n    a + b\n  })\n}\n"
---
----- BEFORE ACTION

import other
pub fn main() {
  other.wibble(10, 20, fn(a) {
        ↑                     
    todo
    a + b
  })
}


----- AFTER ACTION

import other
pub fn main() {
  use a <- other.wibble(10, 20)
  todo
  a + b
}
