language-server/src/tests/snapshots/gleam_language_server__tests__action__turn_call_into_use_with_out_of_order_arguments.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  fold(0, over: [], with: fn (a, b) { todo })\n}\n\nfn fold(over list: List(a), from acc: acc, with fun: fn(acc, a) -> acc) -> acc {\n  todo\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  fold(0, over: [], with: fn (a, b) { todo })
  ↑                                          
}

fn fold(over list: List(a), from acc: acc, with fun: fn(acc, a) -> acc) -> acc {
  todo
}


----- AFTER ACTION

pub fn main() {
  use a, b <- fold(0, over: [])
  todo
}

fn fold(over list: List(a), from acc: acc, with fun: fn(acc, a) -> acc) -> acc {
  todo
}
