language-server/src/tests/snapshots/gleam_language_server__tests__action__turn_call_into_use_with_single_line_body.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  wibble(fn(a, b) { todo })\n}\n\nfn wibble(f) {\n  f(todo, todo)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble(fn(a, b) { todo })
  ↑                        
}

fn wibble(f) {
  f(todo, todo)
}


----- AFTER ACTION

pub fn main() {
  use a, b <- wibble
  todo
}

fn wibble(f) {
  f(todo, todo)
}
